# simple-chat-app

./: README.md
chapp/: codegen.ts  package-lock.json  package.json
chapp/src/graphql/: client.ts  generated.ts  kitQLClient.ts  mutation.gql  query.gql  subscription.gql
chapp/src/lib/state/: user.ts
chapp/src/routes/: +layout.svelte  Header.svelte
chapp/src/routes/chat/: +page.server.ts  +page.svelte  Me.svelte  Rooms.svelte
chapp/src/routes/chat/[slug]/: +page.server.ts  +page.svelte  Message.svelte
chapp_api/: Cargo.toml
chapp_api/src/: main.rs
chapp_api/src/graphql/: schema.rs
chapp_api/src/storage/: models.rs  storage.rs
