[package]
name = "chapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
tower-http = "0.4.0"
tracing-subscriber = "0.3.17"
