[package]
name = "chapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "5.0.9"
async-graphql-axum = "5.0.9"
axum = { version ="0.6.18", features = ["ws", "headers"] }
chrono = "0.4.24"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"]}
tracing-subscriber = "0.3.17"
ulid = "1.0.0"
